[Style] Fix ambassador page on Safari
+ put action short below biography

--- a/client/src/components/ambassador/Ambassador.css
+++ b/client/src/components/ambassador/Ambassador.css
@@ -3,29 +3,21 @@
 @custom-media --side-by-side (width > 700px);
 
 .Ambassador {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-    margin-top: 3em;
-    margin-bottom: 3em;
+    margin: 3em 0;
 }
 
 .Banner {
-    flex: 100%;
-
-    padding-top: 3em;
-    margin-bottom: 3em;
+    display: block;
+    margin: 3em 0;
+    min-width: 100%;
 }
 
 .Biography {
-    flex: 100%;
-
     display: flex;
     flex-direction: column;
 
     line-height: 1.5;
-    margin-top: 3em;
+    margin: 3em 0;
     text-align: center;
     &, & a {
         color: var(--gray-darkest);
@@ -41,5 +33,14 @@
 }
 
 .Avatar {
-    max-width: 300px;
+    @media (--side-by-side) {
+        flex: 1 0;
+        max-width: 300px;
+    }
+}
+
+.Content {
+    @media (--side-by-side) {
+        flex: 2 0;
+    }
 }
